Aprimorei o algoritimo adptando melhor as streams